# MyGame

./: CMakeLists.txt  Code Sign.txt  README.md
AI/: AI.h
AI/HeroBot/: Hero_Bot.h
Classes/: AppDelegate.cpp
Classes/AI/HeroBot/: Hero_Bot.cpp
Classes/Audio/: SoundManager.cpp  SoundManager.h
Classes/Bullet/: Bullet.h
Classes/Camera/: CameraManager.cpp
Classes/Champion/: Champion.cpp  Champion.h  ChampionStatus_Buff.h  ChampionStatus_Debuff.h
Classes/Champion/Hero/: Hero.cpp  Hero.h
Classes/ChampionSkill/: ChampionSkill.h
Classes/ChampionSkill/Hero/: Normal_Attack.cpp  Normal_Attack.h
Classes/DataManager/: ChampionData_Manager.cpp  ChampionData_Manager.h  Database.cpp  Database.h  ItemData_Manager.cpp  ItemData_Manager.h  UserData_Manager.cpp  UserData_Manager.h
Classes/Extention/: DamageManager.h  GameRandom.cpp  GameRandom.h  InGameUI.cpp  InGameUI.h  ItemManager.h  Node_StringNTag.cpp  Node_StringNTag.h  PlayerManager.h  ShopManager.h  Statics_Attributes.h  UserExtend.h
Classes/Factory/: Bot_Factory.cpp  Bot_Factory.h  BulletPhysicFactory.cpp  BulletPhysicFactory.h  ChampionSkillFacatory.cpp  ChampionSkillFacatory.h  GameObjectFactory.cpp  GameObjectFactory.h  PlayerFactory.cpp  PlayerFactory.h  SkillFactory.cpp  SkillFactory.h  SkillTriggerCondition.cpp  SkillTriggerCondition.h  SkillTypeFactory.cpp  SkillTypeFactory.h
Classes/GameFight/: BattleElement.cpp  BattleElement.h  GameEnvironment.cpp  GameEnvironment.h
Classes/GameObject/: AGameObject.h  GameObject.cpp  GameObject.h  Properties.h
Classes/GameScene/: BattleScene.cpp  BattleScene.h  GameOverScene.cpp  GameOverScene.h  GameScene.cpp  GameScene.h  Login.cpp  Login.h  MainMenuScene.cpp  MainMenuScene.h  PauseScene.cpp  PauseScene.h  ShopScene.cpp  ShopScene.h
Classes/Inventory/: Inventory.cpp  Inventory.h
Classes/Item/: Item.cpp  Item.h
Classes/Item/Weapon/: Weapon.cpp  Weapon.h
Classes/Map/: Map.cpp  Map.h
Classes/ObjectManager/: BulletManager.cpp  BulletManager.h  LogManager.cpp  LogManager.h
Classes/Physic/: BulletPhysic.h  BulletPhysic_Default.cpp  BulletPhysic_Default.h
Classes/Player/: Player.cpp  Player.h
Classes/Player/Bot/: Bot.cpp  Bot.h
Classes/Player/Human/: Human.cpp  Human.h
Classes/Shop/: ShopChild_Type.cpp  ShopChild_Type.h  ShopElement.cpp  ShopElement.h
Classes/Skill/: Skill.h
Classes/Skill/Active/: Active.cpp  Active.h
Classes/Skill/Passive/: Passive.cpp  Passive.h
Classes/Skill/SkillType/: SkillType.h
Classes/Skill/SkillType/RunAnimation/: RunAnimation.cpp  RunAnimation.h
Classes/Skill/SkillType/ShootBullet/: ShootBullet.cpp  ShootBullet.h
Classes/Skill/Toggle/: Toggle.cpp  Toggle.h
Classes/Skill/TriggerCondition/: TriggerCondition.h
Classes/Skill/TriggerCondition/AlwayActive/: AlwayActive.cpp  AlwayActive.h
Classes/Skill/TriggerCondition/OnAttack/: OnAttack.cpp  OnAttack.h
Classes/Skill/TriggerCondition/OnClick/: OnClick.cpp  OnClick.h
Classes/Skill/TriggerCondition/OnDeath/: OnDeath.cpp  OnDeath.h
Classes/Skill/TriggerCondition/OnHit/: OnHit.cpp  OnHit.h
Classes/User/: User.cpp  User.h
Resources/map/: Confetti (16x16).tsx  Terrain (16x16).tsx  map_1.tiled-session  map_first.tmx  map_second.tmx  map_third.tmx
Resources/ui/: Untitled.pdn
database/: database.db
